# CS_417_Semester_Project_Emily_Rick

./: README.md  pyproject.toml
cs417temp/: __init__.py  __main__.py  global_linear_least_squares_approx.py  piecewise_linear_interpolation.py
cs417temp/Interpolation_Output_Files/: sensors-2018.12.26-no-labels-core-2.txt  sensors-2018.12.26-no-labels-core-3.txt  sensors-2019.01.26-no-labels-core-2.txt  sensors-2019.02.09-no-labels-core-1.txt  sensors-2019.02.09-no-labels-core-2.txt
cs417temp/Least_Squares_Output_Files/: sensors-2018.12.26-no-labels-core-0.txt  sensors-2018.12.26-no-labels-core-1.txt  sensors-2018.12.26-no-labels-core-2.txt  sensors-2018.12.26-no-labels-core-3.txt  sensors-2019.01.26-no-labels-core-0.txt  sensors-2019.01.26-no-labels-core-1.txt  sensors-2019.01.26-no-labels-core-2.txt  sensors-2019.01.26-no-labels-core-3.txt  sensors-2019.02.09-no-labels-core-0.txt  sensors-2019.02.09-no-labels-core-1.txt  sensors-2019.02.09-no-labels-core-2.txt  sensors-2019.02.09-no-labels-core-3.txt
cs417temp/Output_Files/: sensors-2018.12.26-no-labels-core-0.txt  sensors-2018.12.26-no-labels-core-1.txt  sensors-2019.01.26-no-labels-core-0.txt  sensors-2019.01.26-no-labels-core-1.txt  sensors-2019.01.26-no-labels-core-3.txt  sensors-2019.02.09-no-labels-core-0.txt  sensors-2019.02.09-no-labels-core-3.txt
